--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ a:visited {
   gap: 0.5rem 2.5rem;
 
   /* Match height and activity boxes */
-  height: 9.25rem;
+  height: 10.25rem;
   transition: all 0.5s, transform 1ms;
 }
 
@@ -168,7 +168,11 @@ a:visited {
 }
 
 .form__btn {
-  display: none;
+  border: none;
+  border-radius: 3px;
+  padding: 3px 3px;
+  margin: 0;
+  grid-column: 1 / 3;
 }
 
 .copyright {
